Cleaned up App.tsx and App.css, removed unused Props and cleaned up states

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,10 @@
   align-items: 'center';
   flex-wrap: 'wrap',
 }
+.add-contact-page{
+  text-align: center;
+  margin-top: 10%;  
+}
+.add-contact-title {
+  margin-bottom: 20px;
+}
